Fix z-index

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap');
+#Header{
+  position: relative;
+}
 #brand {
   font-family: 'Playfair Display', serif;
   font-size: 40px;
   font-weight: 400;
 }
-
 #cart-button{
   display:flex;
   justify-content: center;
